--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@types/express": "^4.17.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
-    "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "@types/react": "16.9.3",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
-    "react": "^16.9.0",
+    "express": "^4.17.1",
     "react-dom": "^16.9.0",
     "react-rte": "^0.16.1",
     "react-scripts": "3.1.2",
+    "react": "^16.9.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
@@ -30,15 +33,9 @@
   "proxy": "http://localhost:3001/",
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      ">0.2%", "not dead", "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "devDependencies": {
     "@types/react-rte": "^0.16.1"
