--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/express": "^4.17.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
-  }
+  "license": "ISC"
 }
